--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     </header>
     <hr>
+    <br>
+    <p>Please let us know how much you liked our service.</p>
+    <br>
+
     <main>
         <form>
             <label for="fname">First Name:</label><br>
